Применён .gitignoe: удалены из индекса игнорируемые файлы